--- a/elk-lab/ansible/inventories/vagrant/hosts.ini
+++ b/elk-lab/ansible/inventories/vagrant/hosts.ini
@@ -14,3 +14,4 @@ elk ansible_host=192.168.57.14 ansible_ssh_private_key_file=.vagrant/machines/el
 [all:vars]
 ansible_user=vagrant
 host_key_checking=False
+ansible_python_interpreter=/usr/bin/python3
